[package]
name = "rexplc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"

[dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"
lazy_static = "1.4.0"
tokio = { version = "1.1", features=["full"] }
log = "0.4"

